--- a/arco-login-test.yml
+++ b/arco-login-test.yml
@@ -1,5 +1,5 @@
 config:
-  target: "https://alpha.spgcontrols.com/"
+  target: "https://localhost"
   tls:
       rejectUnauthorized: false 
   engines:
@@ -9,28 +9,28 @@ config:
         timeout: 720000
   processor: "./eloy-sample.js"
   phases:
-    # - name: "login"
-    #   duration: 20
-    #   arrivalRate: 3
-    #   rampTo: 5
+    - name: "login"
+      duration: 20
+      arrivalRate: 3
+      rampTo: 5
     # - name: "users_page"
     #   duration: 30
     #   arrivalRate: 7
     #   rampTo: 10
-    - name: "sites"
-      duration: 50
-      arrivalRate: 2
-      rampTo: 40
+    # - name: "sites"
+    #   duration: 50
+    #   arrivalRate: 2
+    #   rampTo: 40
 scenarios:
-  # - name: "users_login"
-  #   engine: playwright
-  #   flowFunction: "arcoLogin"
-  #   flow: []
+  - name: "users_login"
+    engine: playwright
+    flowFunction: "arcoLogin"
+    flow: []
   # - name: "navigate_user_page"
   #   engine: playwright
   #   flowFunction: "usersPage"
   #   flow: []
-  - name: "navigate_sites_page"
-    engine: playwright
-    flowFunction: "sitePage"
-    flow: []
+  # - name: "navigate_sites_page"
+  #   engine: playwright
+  #   flowFunction: "sitePage"
+  #   flow: []
